--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,7 +24,7 @@
         ],
         "semi": [
             "error",
-            "always"
+            "never"
         ],
         "no-console": "off",
         "mocha/no-exclusive-tests": "error"
