--- a/package.json
+++ b/package.json
@@ -5,14 +5,18 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha --ui tdd",
-    "start": "node src/index"
+    "start": "node src/index",
+    "dev": "nodemon src/index"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "axios": "^0.18.0",
     "eslint": "^4.19.1",
     "eslint-plugin-mocha": "^5.0.0",
-    "mocha": "^5.1.1"
+    "express": "^4.16.3",
+    "mocha": "^5.1.1",
+    "nodemon": "^1.17.3"
   }
 }
